[tool.poetry]
name = "trip-viewer"
version = "0.1.0"
description = "To show a trip in a gantt chart"
authors = ["Jonnas Schlottfeldt"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
numpy = "^1.26.2"
mplcursors = "^0.5.2"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
